# toelpel

./: .gitignore  README.md  Taskfile.yaml  pyproject.toml
git_watchtower/: cli.py  git.py  store.py
tests/: test_cli.py  test_colony.py  test_git.py  test_locate_root_and_index.py  test_store.py
tests/assets/: example_index.ttl
tests/assets/examples/: index_local.ttl  index_online.ttl  index_remote_ab.ttl
tests/assets/examples/repo_content/: README.md
tests/assets/queries/: index_repo_a_and_b_exist.rq  index_repos_exist.rq  index_repos_have_remote.rq  index_verify_repo_remote.rq
toelpel/: cli.py  colony.py  git.py  output.py  store.py
