[tool.poetry]
name = "git-watchtower"
version = "0.1.0"
description = ""
authors = ["Natanael Arndt <arndtn@gmail.com>"]
license = "GPLv3+"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
click = "^8.1.7"
loguru = "^0.7.2"
pyyaml = "^6.0.1"
rdflib = "^7.0.0"
rich = "^13.7.1"

[tool.poetry.group.dev.dependencies]
ruff = "^0.2.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
git-watchtower = "git_watchtower.cli:cli"
gto = "git_watchtower.cli:cli"
